footer.css changes

--- a/footer.css
+++ b/footer.css
@@ -81,7 +81,7 @@ body {
   color: white;
 }
 
-/* Privacy policy content */
+/* Main content */
 .item3 {
     grid-area: body;
     background-color: #fff;
